# video-app

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
src/: config_template.ini  main.cpp
src/base/: noncopyable.h  nonmovable.h  singleton.h
src/config/: config_file_path.h.in  config_manager.cpp  config_manager.h
src/log/: log_system.cpp  log_system.h
src/render/context/: gl_context.cpp  gl_context.h  window_manager.cpp  window_manager.h
src/render/window/: window_manager.cpp  window_manager.h
